hero section completed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- Navigation Bar -->
     <div class="nav">
         <div class="nav-spacing" style="padding-left: 100px;padding-right: 100px;">
             <div class="nav-container">
@@ -32,6 +33,7 @@
             <div class="divider"></div>
         </div>
     </div>
+    <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-heading-section">
             <h1 class="heading-1 mb-16">The Savy Way to Save</h1>
@@ -39,6 +41,16 @@
                 more.</p>
             <button class="btn-cta">Get Started</button>
         </div>
+    </section>
+    <!-- Offer Section -->
+    <section class="offer-section">
+        <!-- Offer Image -->
+        <div class="offer-img-layout">
+            <div class="offer-img-container">
+                <img class="offer-img" src="/assets/hero-img.png" alt="hero-img">
+            </div>
+        </div>
+
     </section>
 </body>
 
