offer-section-heading

--- a/index.html
+++ b/index.html
@@ -50,8 +50,20 @@
                 <img class="offer-img" src="/assets/hero-img.png" alt="hero-img">
             </div>
         </div>
+        <div class="offer-heading">
+            <h1 class="heading-1 black">Access over 20,000<br>local & national offers<br>and rewards</h1>
+        </div>
+        <div class="offer-gird-img">
+            <div class="grid-img-container-1">
+                <div class="square">test square</div>
+            </div>
+            <div class="grid-img-container-1">
+                <div class="square">test square</div>
+            </div>
 
+        </div>
     </section>
+
 </body>
 
 </html>
