--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
             <h1 class="heading-1 black">Access over 20,000<br>local & national offers<br>and rewards</h1>
         </div>
         <div class="offer-gird-img">
-            <div class="grid-img-container-1">
-                <div class="square">test square</div>
+            <div class="grid-img-container">
+                <div class="grid-img-1"><img src="/assets/offer-img-1.png" alt="offer-img-1" class="offer-img-1"></div>
+                <div class="grid-img-2"><img src="/assets/offer-img-1.png" alt="offer-img-2" class="offer-img-2"></div>
+                <div class="grid-img-3"> </div>
+                <div class="grid-img-4"> </div>
             </div>
-            <div class="grid-img-container-1">
-                <div class="square">test square</div>
-            </div>
-
         </div>
     </section>
 
