Social Proof -Completed

--- a/index.html
+++ b/index.html
@@ -50,18 +50,52 @@
                 <img class="offer-img" src="/assets/hero-img.png" alt="hero-img">
             </div>
         </div>
+        <!-- Offer Heading -->
         <div class="offer-heading">
             <h1 class="heading-1 black">Access over 20,000<br>local & national offers<br>and rewards</h1>
+            <button class="btn-learn-more mt-24">Learn More<svg class="ml-24" width="33" height="33" viewBox="0 0 33 33"
+                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M28 6C28 5.44772 27.5523 5 27 5L18 5C17.4477 5 17 5.44772 17 6C17 6.55229 17.4477 7 18 7H26V15C26 15.5523 26.4477 16 27 16C27.5523 16 28 15.5523 28 15L28 6ZM6.70711 27.7071L27.7071 6.70711L26.2929 5.29289L5.29289 26.2929L6.70711 27.7071Z"
+                        fill="#FA4026" />
+                </svg>
+            </button>
         </div>
+        <!-- Offer Grid Image -->
         <div class="offer-gird-img">
             <div class="grid-img-container">
-                <div class="grid-img-1"><img src="/assets/offer-img-1.png" alt="offer-img-1" class="offer-img-1"></div>
-                <div class="grid-img-2"><img src="/assets/offer-img-1.png" alt="offer-img-2" class="offer-img-2"></div>
-                <div class="grid-img-3"> </div>
+                <div class="grid-img-1">
+                    <div class="offer-img-1"></div>
+                </div>
+                <div class="grid-img-2">
+                    <div class="offer-img-2-1 mr-32"></div>
+                    <div class="offer-img-2-2 mt-32"></div>
+                </div>
+                <div class="grid-img-3">
+                    <div class="offer-img-3 mt-24"></div>
+                </div>
                 <div class="grid-img-4"> </div>
             </div>
         </div>
     </section>
+
+    <!-- Social Proof Section -->
+
+    <section class="social-proof-section">
+        <div class="social-proof-container">
+            <h1 class="heading-1 center-aligned mb-56">Increase up to 15%<br>revenue like these brands</h1>
+            <div class="brand-list">
+                <img src="/assets/brand-logo-01.svg" alt="">
+                <img src="/assets/brand-logo-02.svg" alt="">
+                <img src="/assets/brand-logo-03.svg" alt="">
+                <img src="/assets/brand-logo-04.svg" alt="">
+                <img src="/assets/brand-logo-05.svg" alt="">
+                <img src="/assets/brand-logo-06.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- Plans -->
 
 </body>
 
