--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         </div>
     </div>
     <!-- Hero Section -->
-    <section class="hero-section">
+    <header class="hero-section">
         <div class="hero-heading-section">
             <h1 class="heading-1 mb-16">The Savy Way to Save</h1>
             <p class="body-text mb-32">Giving Members exclusive offers on dining, travel, activities, shopping and
                 more.</p>
             <button class="btn-cta">Get Started</button>
         </div>
-    </section>
+    </header>
     <!-- Offer Section -->
     <section class="offer-section">
         <!-- Offer Image -->
@@ -53,12 +53,7 @@
         <!-- Offer Heading -->
         <div class="offer-heading">
             <h1 class="heading-1 black">Access over 20,000<br>local & national offers<br>and rewards</h1>
-            <button class="btn-learn-more mt-24">Learn More<svg class="ml-24" width="33" height="33" viewBox="0 0 33 33"
-                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M28 6C28 5.44772 27.5523 5 27 5L18 5C17.4477 5 17 5.44772 17 6C17 6.55229 17.4477 7 18 7H26V15C26 15.5523 26.4477 16 27 16C27.5523 16 28 15.5523 28 15L28 6ZM6.70711 27.7071L27.7071 6.70711L26.2929 5.29289L5.29289 26.2929L6.70711 27.7071Z"
-                        fill="#FA4026" />
-                </svg>
+            <button class="btn-learn-more mt-24">Learn More
             </button>
         </div>
         <!-- Offer Grid Image -->
@@ -95,8 +90,14 @@
         </div>
     </section>
 
-    <!-- Plans -->
-
+    <!-- Plans Section -->
+    <section class="plan-section">
+        <div class="plan-heading-section">
+            <h1 class="heading-1">Plans and Pricing</h1>
+            <p class="body-text">30-day free trial, cancel any time. No credit card required.</p>
+            <div></div>
+        </div>
+    </section>
 </body>
 
 </html>
